--- a/my-astro-site/src/pages/menu.astro
+++ b/my-astro-site/src/pages/menu.astro
@@ -79,6 +79,7 @@
                     )
                 }
         </article>
+        <hr>
         <article>
             <h1>Secondi</h1>
                 { 
@@ -95,6 +96,7 @@
                     )
                 }
         </article>
+        <hr>
         <article>
             <h1>Specialità</h1>
                 { 
@@ -111,6 +113,7 @@
                     )
                 }
         </article>
+        <hr>
         <article>
             <h1>Contorni</h1>
                 { 
@@ -127,6 +130,7 @@
                     )
                 }
         </article>
+        <hr>
         <article>
             <h1>Vegetariano</h1>
                 { 
@@ -143,6 +147,7 @@
                     )
                 }
         </article>
+        <hr>
         <article>
             <h1>Dolci</h1>
                 { 
@@ -159,6 +164,7 @@
                     )
                 }
         </article>
+        <hr>
         <article>
             <h1>Bevande</h1>
                 { 
@@ -195,6 +201,7 @@
         flex-direction: row-reverse;
     }
     section{
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
