--- a/my-astro-site/src/pages/menu.astro
+++ b/my-astro-site/src/pages/menu.astro
@@ -59,6 +59,7 @@
 <body>
 
     <header>
+        <a href="/globale"><img src="/icona.png" alt=""></a>
         <h1>Menù</h1>
     </header>
     <hr>
@@ -190,6 +191,10 @@
 </body>
 
 <style>
+a img{
+    width: 45px;
+    height: 30px;
+}
     article div{
         align-items: center;
         display: flex;
