--- a/my-astro-site/src/pages/globale.astro
+++ b/my-astro-site/src/pages/globale.astro
@@ -22,12 +22,15 @@
                 <li>
                     <a href="#storia" class="link">Storia</a>
                 </li>
+                <li>
+                    <a href="#locanda" class="link">Locanda</a>
+                </li>
             </ul>
         </nav>
     </header>
     <main>
         <article>
-            <a href="#locanda">La nostra Locanda</a>
+            <h1 id="locanda">La nostra Locanda</h1>
             <img class="img" src="/locanda.jpg" alt="">
         </article>
         <div class="menu">
@@ -37,9 +40,6 @@
         <article>
             <h1 id="chi-siamo">CHI SIAMO</h1>
             <h4>Si tratta di una innovativa realtà imprenditoriale e sociale che formula i propri progetti e fonda le proprie azioni su un obiettivo: sostenere, attraverso la ristorazione, l’inclusione economica e sociale di giovani con disturbi del neurosviluppo e di persone vulnerabili che hanno bisogno di ritrovare una propria dimensione lavorativa, valorizzando al tempo stesso il radicamento nel territorio e la presenza attiva e aperta alla comunità.</h4>
-        </article>
-        <article>
-            <h1 id="locanda">LA LOCANDA</h1>
         </article>
         <article>
             <h1 id="storia">STORIA</h1>
@@ -180,6 +180,7 @@
         justify-content: space-between;
         align-items: center;
         background-image: url('/header2.png');
+        background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
         height: 150px;
