--- a/my-astro-site/src/pages/menu.astro
+++ b/my-astro-site/src/pages/menu.astro
@@ -65,14 +65,14 @@
     <hr>
     <main>
         <article>
-            <h1>Primi</h1>
+            <legend>Primi</legend>
                 { 
                     await dataPrimi.data.map(all=>
                         <div>
                             <section>
-                                <h5>{all.attributes.nome}</h5>
-                                <h6>{all.attributes.descrizione}</h6>
-                                <h6>{all.attributes.prezzo+" €"}</h6>
+                                <h5>Nome: {all.attributes.nome}</h5>
+                                <h6>Descrizione: {all.attributes.descrizione}</h6>
+                                <h6>Prezzo: {all.attributes.prezzo+" €"}</h6>
                             </section>
                             <img src={"http://api.made7-g6.webe.radio"+ all.attributes.immagini.data.attributes.url}>
                         </div>
@@ -82,14 +82,14 @@
         </article>
         <hr>
         <article>
-            <h1>Secondi</h1>
+            <legend>Secondi</legend>
                 { 
                     await dataSecondi.data.map(all=>
                         <div>
                             <section>
-                                <h5>{all.attributes.nome}</h5>
-                                <h6>{all.attributes.descrizione}</h6>
-                                <h6>{all.attributes.prezzo+" €"}</h6>
+                                <h5>Nome: {all.attributes.nome}</h5>
+                                <h6>Descrizione: {all.attributes.descrizione}</h6>
+                                <h6>Prezzo: {all.attributes.prezzo+" €"}</h6>
                             </section>
                             <img src={"http://api.made7-g6.webe.radio"+ all.attributes.immagini.data.attributes.url}>
                         </div>
@@ -99,14 +99,14 @@
         </article>
         <hr>
         <article>
-            <h1>Specialità</h1>
+            <legend>Specialità</legend>
                 { 
                     await dataSpecialita.data.map(all=>
                         <div>
                             <section>
-                                <h5>{all.attributes.nome}</h5>
-                                <h6>{all.attributes.descrizione}</h6>
-                                <h6>{all.attributes.prezzo+" €"}</h6>
+                                <h5>Nome: {all.attributes.nome}</h5>
+                                <h6>Descrizione: {all.attributes.descrizione}</h6>
+                                <h6>Prezzo: {all.attributes.prezzo+" €"}</h6>
                             </section>
                             <img src={"http://api.made7-g6.webe.radio"+ all.attributes.immagini.data.attributes.url}>
                         </div>
@@ -116,14 +116,14 @@
         </article>
         <hr>
         <article>
-            <h1>Contorni</h1>
+            <legend>Contorni</legend>
                 { 
                     await dataContorni.data.map(all=>
                         <div>
                             <section>
-                                <h5>{all.attributes.nome}</h5>
-                                <h6>{all.attributes.descrizione}</h6>
-                                <h6>{all.attributes.prezzo+" €"}</h6>
+                                <h5>Nome: {all.attributes.nome}</h5>
+                                <h6>Descrizione: {all.attributes.descrizione}</h6>
+                                <h6>Prezzo: {all.attributes.prezzo+" €"}</h6>
                             </section>
                             <img src={"http://api.made7-g6.webe.radio"+ all.attributes.immagini.data.attributes.url}>
                         </div>
@@ -133,14 +133,14 @@
         </article>
         <hr>
         <article>
-            <h1>Vegetariano</h1>
+            <legend>Vegetariano</legend>
                 { 
                     await dataVegetariano.data.map(all=>
                         <div>
                             <section>
-                                <h5>{all.attributes.nome}</h5>
-                                <h6>{all.attributes.descrizione}</h6>
-                                <h6>{all.attributes.prezzo+" €"}</h6>
+                                <h5>Nome: {all.attributes.nome}</h5>
+                                <h6>Descrizione: {all.attributes.descrizione}</h6>
+                                <h6>Prezzo: {all.attributes.prezzo+" €"}</h6>
                             </section>
                             <img src={"http://api.made7-g6.webe.radio"+ all.attributes.immagini.data.attributes.url}>
                         </div>
@@ -150,14 +150,14 @@
         </article>
         <hr>
         <article>
-            <h1>Dolci</h1>
+            <legend>Dolci</legend>
                 { 
                     await dataDolci.data.map(all=>
                         <div>
                             <section>
-                                <h5>{all.attributes.nome}</h5>
-                                <h6>{all.attributes.descrizione}</h6>
-                                <h6>{all.attributes.prezzo+" €"}</h6>
+                                <h5>Nome: {all.attributes.nome}</h5>
+                                <h6>Descrizione: {all.attributes.descrizione}</h6>
+                                <h6>Prezzo: {all.attributes.prezzo+" €"}</h6>
                             </section>
                             <img src={"http://api.made7-g6.webe.radio"+ all.attributes.immagini.data.attributes.url}>
                         </div>
@@ -167,14 +167,14 @@
         </article>
         <hr>
         <article>
-            <h1>Bevande</h1>
+            <legend>Bevande</legend>
                 { 
                     await dataBevanda.data.map(all=>
                         <div>
                             <section>
-                                <h5>{all.attributes.nome}</h5>
-                                <h6>{all.attributes.descrizione}</h6>
-                                <h6>{all.attributes.prezzo+" €"}</h6>
+                                <h5>Nome: {all.attributes.nome}</h5>
+                                <h6>Descrizione: {all.attributes.descrizione}</h6>
+                                <h6>Prezzo: {all.attributes.prezzo+" €"}</h6>
                             </section>
                             <img src={"http://api.made7-g6.webe.radio"+ all.attributes.immagini.data.attributes.url}>
                         </div>
@@ -246,8 +246,6 @@ a img{
         width: 100vw;
         font-family: 'Roboto', sans-serif;
         background-color: #EDF2F4;
-        text-shadow: 0px 2px 10px white, 0px 0px 3px black;
-        color: #EDF2F4;
         margin: 0;
         height: 100vh;
     }
@@ -274,5 +272,12 @@ a img{
     h5{
         color: #2B2D42;
         text-align: center;
+    }
+    legend{
+        text-align: center;
+        font-weight: bold;
+        font-size: 2rem;
+        margin-bottom: 10px;
+        text-shadow: 0px 10px 4px rgba(0, 0, 0, 0.658);
     }
 </style>
