--- a/my-astro-site/src/pages/menu.astro
+++ b/my-astro-site/src/pages/menu.astro
@@ -59,8 +59,10 @@
 <body>
 
     <header>
-        <a href="/globale"><img src="/icona.png" alt=""></a>
-        <h1>Menù</h1>
+        <div>
+            <a href="/globale"><img src="/icona.png" alt=""></a>
+            <h1>Menù</h1>
+        </div>
     </header>
     <hr>
     <main>
@@ -191,10 +193,15 @@
 </body>
 
 <style>
-a img{
-    width: 45px;
-    height: 30px;
-}
+    a img{
+        width: 75px;
+        height: 50px;
+    }
+    a{
+        padding: 8px 0px;
+        border-radius: 100%;
+        border: 3px solid #d8042be8;
+    }
     article div{
         align-items: center;
         display: flex;
@@ -260,10 +267,18 @@ a img{
         background: url('/header2.png');
         background-position: center;
         background-repeat: no-repeat;
+        background-size: cover;
         height:75px;
         width: 100vw;
-        background-size: cover;
         padding-top: 10px;
+        display: flex;
+        justify-content: space-between;
+    }
+    header div{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 50%;
     }
     header h1{
         font-size: 2rem;
